[bumpversion]
current_version = 0.0.0
tag = True
commit = True

[bumpversion:file:version.txt]

[aliases]
test = pytest

[metadata]
name = bourbaki
author = Matthew Hawthorn
author_email = hawthorn.matthew@gmail.com
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Code Generators
	Topic :: Text Processing
	Topic :: Utilities
	Typing :: Typed
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bourbaki-py/

[options]
packages = find:
install_requires =
    bourbaki.regex==0.1.2
tests_require = 
	pytest
	pytest-cov
zip_safe = True
